# rsomics-fastq-trim

./: Cargo.toml  README.md
benches/: bench.rs  fastq_trim.rs
src/: adapter.rs  cli.rs  fixed.rs  lib.rs  main.rs  overlap.rs  parallel_gz.rs  pipeline.rs  polyx.rs
tests/: compat.rs
tests/golden/: pe_overlap_r1.fastq  pe_overlap_r1.trimmed.fastq  pe_overlap_r2.fastq  pe_overlap_r2.trimmed.fastq  se_adapter.fastq  se_adapter.trimmed.fastq  se_fixed.trimmed.fastq  se_polyg.fastq  se_polyg.trimmed.fastq
