[package]
name = "rsomics-fastq-trim"
version = "0.4.5"
description = "FASTQ adapter / poly-G / poly-X / fixed-length trimming. Rust port of fastp's trim hot path with rayon-parallel SE + PE pipelines and AI-friendly --json output."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "fastp", "adapter-trimming", "polyg"]

[[bin]]
name = "rsomics-fastq-trim"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-fqgz = { path = "../../../foundation/rsomics-fqgz", version = "0.1" }
rsomics-seqio = { path = "../../../foundation/rsomics-seqio", version = "0.1" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
rayon.workspace = true
flate2.workspace = true
libdeflater = "1"
memchr = "2"

[dev-dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5", features = ["test-support", "rayon"] }
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "fastq_trim"
harness = false

[lints]
workspace = true
