[package]
name = "rsomics-fastq-trim"
version = "0.4.5"
description = "FASTQ adapter / poly-G / poly-X / fixed-length trimming. Rust port of fastp's trim hot path with rayon-parallel SE + PE pipelines and --json output."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "fastp", "adapter-trimming", "polyg"]

[[bin]]
name = "rsomics-fastq-trim"
path = "src/main.rs"


[lib]
name = "rsomics_fastq_trim"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-fqgz = { version = "0.1" }
rsomics-seqio = { version = "0.1" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
libdeflater = "1"
memchr = "2"

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support", "rayon"] }
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fastq_trim"
harness = false

